"Fixed Navbar Orientation, main block spacing"

--- a/src/index.css
+++ b/src/index.css
@@ -21,5 +21,5 @@ a {
 
 body {
   min-width: 320px;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
